[tool.poetry]
name = "medminer"
description = "Project to use LLM agents for text analysis in the medical field"
version = "1.0.0"
license = "MIT"
authors = ["AIDH MS"]
readme = "README.md"
homepage = "https://github.com/aidh-ms/MedMiner"
repository = "https://github.com/aidh-ms/MedMiner"
documentation = "https://github.com/aidh-ms/MedMiner"
keywords = ["llm", "agents", "ai", "ml", "medical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Changelog = "https://github.com/aidh-ms/MedMiner/releases"
Bugtracker = "https://github.com/aidh-ms/MedMiner/issues"

[tool.poetry.dependencies]
python = "^3.13"
smolagents = {extras = ["transformers"], version = "^1.22.0"}
httpx = "^0.28.1"
torch = "^2.7.1"
gradio = "^5.49.1"
pandas = "^2.3.3"
pandas-stubs = "^2.3.2.250926"
pre-commit = "^4.3.0"

[tool.poetry.group.openai.dependencies]
openai = "^2.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
coverage = "^7.10.7"
pytest-cov = "^7.0.0"
ruff = "^0.14.0"
pytest-asyncio = "^1.2.0"
pytest-recording = "^0.13.4"
pytest-random-order = "^1.2.0"
jupyter = "^1.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
pymdown-extensions = "^10.16"
mkdocstrings-python = "^1.18.2"
mkdocs-macros-plugin = "^1.4.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"
mkdocs-jupyter = "^0.25.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["smolagents.*", "transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"
addopts = [
    "--cov",
    "--cov-branch",
    "--cov=src",
    "--cov-report=xml",
    "--import-mode=importlib",
    "--random-order",
]
